--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ru_RU" />
 
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,8 +28,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="/main.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./main.js" defer></script>
 
     <!-- JSON-LD (минимальная заготовка, заполните контакты в main.js) -->
     <script type="application/ld+json">
@@ -56,7 +56,7 @@
       <div class="container header__row">
         <a class="brand" href="#top" aria-label="АНИКО Цемент">
           <span class="brand__mark" aria-hidden="true">
-  <img class="brand__logo" src="/logo.svg" alt="АНИКО" />
+  <img class="brand__logo" src="./logo.svg" alt="АНИКО" />
 </span>
           <span class="brand__text">
             <span class="brand__name">АНИКО</span>
